# codespaces-blank

./: .gitignore  AGENTS.md  LICENSE  PLAY_STORE_LISTING.md  PRIVACY_POLICY.md  README.md  RELEASE_NOTES.md  build.gradle.kts  gradle.properties  keystore.properties.example  pyproject.toml  release-plan.md  settings.gradle.kts  sort_photos.py
.github/: copilot-instructions.md
android_pic_sort.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_about.xml  ic_copy_action.xml  ic_date_file.xml  ic_date_metadata.xml  ic_folders_pair.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_move_action.xml  ic_scope_images_only.xml  ic_scope_images_plus.xml  ic_source_directory.xml  ic_summary.xml  ic_target_directory.xml  ic_tune.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
arc42/: 01_introduction_and_goals.md  02_architecture_constraints.md  03_context_and_scope.md  05_building_block_view.md  06_runtime_view.md  08_crosscutting_concepts.md  09_architecture_decisions.md  10_quality_requirements.md  12_glossary.md  README.md
core/: build.gradle.kts
docs/: local-release-play-upload.md
scripts/: deploy-last-build.sh  dev-run.sh  generate-launcher-icons.sh  release-local.sh
src/: __init__.py  __main__.py  sort_photos.py
test-reports/: README.md
(+39 files in other folders)
